** Out of Range & Out Of Power settings now use Opactiy & Color settings.
** You can also set a custom texture for each of your Opacity & Color settings.

* Combat Log Source and Destination units may now have unit conditions when filtered by unitID.
* New conditions have been added for:
** Checking your current location
** Checking your last spell cast (for Windwalker Monk mastery)
* And much, much more! Dig in to check it all out!

===v7.4.0===
* Bar and Vertical Bar groups now have several new options:
** Show/Hide Icon
** Flip Icon
** Bar & Icon Borders

===v7.3.5===
====Bug Fixes====
* The TMWFormatDuration DogTag now properly handles negative durations.

===v7.3.4===
* Blizzard's new completion pulse animation on cooldown sweeps is now disabled by default, and can be enabled in TMW's main options.

====Bug Fixes====
* Power Bar Overlays should function once again.

===v7.3.3===
* Unit Cooldown icons can now filter spells based on the known class spells of a unit.

====Bug Fixes====
* Fixed: Condition_THREATSCALED: Usage: UnitDetailedThreatSituation("unit" [, "mob"])

===v7.3.1===
====Bug Fixes====
* Fixed: UnitAttributes.lua:277: 'for' limit must be a number.

===v7.3.0===
* The suggestion list now works with arrow keys to pick what line tab will insert.
* You can now use the suggestion list to pick condition types (the Condition Type dropdown now has a textbox on it).
* The Player Specialization condition is now deprecated in favor of the Unit Specialization condition.
* On Left/Right Click notification triggers no longer make icons click-interactive when the icon is hidden (opacity 0).

====Bug Fixes====
* Fixed some issues with the All-Unit Buff/Debuff icon type caused by some auras (A Murder of Crows) not firing combat log events on application/removal.
* Icons should no longer be treated as being on cooldown for color settings if they're tracking an ability that still has charges remaining.