@@ -66,3 +66,39 @@ function Module:Entry_AddToList_1(f, id)
 	f.Icon:SetTexture(iconTexture)
 end
 Module.Entry_Colorize_1 = TMW.NULLFUNC
+
+
+
+local Module = SUG:NewModule("pvptalents", SUG:GetModule("talents"))
+Module.table = {}
+
+function Module:Table_Get()
+	wipe(self.table)
+
+	for tier = 1, MAX_TALENT_TIERS do
+		for column = 1, NUM_TALENT_COLUMNS do
+			local id, name = GetPvpTalentInfo(tier, column, 1)
+			
+			local lower = name and strlowerCache[name]
+			if lower then
+				self.table[id] = lower
+			end
+		end
+	end
+
+	return self.table
+end
+function Module:Entry_AddToList_1(f, id)
+	local id, name, iconTexture = GetPvpTalentInfoByID(id) -- restore case
+
+	f.Name:SetText(name)
+	f.ID:SetText(id)
+
+	f.tooltipmethod = "SetHyperlink"
+	f.tooltiparg = GetPvpTalentLink(id)
+
+	f.insert = name
+	f.insert2 = id
+
+	f.Icon:SetTexture(iconTexture)
+end
