@@ -25,6 +25,7 @@ local TimerBar_BarDisplay = TMW:NewClass("IconModule_TimerBar_BarDisplay", "Icon
 TimerBar_BarDisplay:RegisterIconDefaults{
 	BarDisplay_Invert			= false,
 	BarDisplay_BarGCD			= false,
+	BarDisplay_ClassColor		= false,
 	BarDisplay_FakeMax			= 0,
 }
 
@@ -51,7 +52,11 @@ TimerBar_BarDisplay:PostHookMethod("OnEnable", function(self)
 	local attributes = icon.attributes
 	self.Invert = self.Invert_base
 
-	self:VALUE(icon, attributes.value, attributes.maxValue, attributes.valueColor)
+	if TMW.Locked then
+		self:VALUE(icon, attributes.value, attributes.maxValue, attributes.valueColor)
+	else
+		self:VALUE(icon, 1, 1, attributes.valueColor)
+	end
 end)
 
 function TimerBar_BarDisplay:GetValue()
@@ -103,7 +108,7 @@ function TimerBar_BarDisplay:VALUE(icon, value, maxValue, valueColor)
 			self.bar:SetMinMaxValues(0, self.Max)
 		end
 
-		self:SetupColors(self.sourceIcon, valueColor)
+		self:SetupColors(self.sourceIcon, valueColor, icon.attributes.unit)
 
 		-- Force an update here since it won't get updated if the color changes and the value doesnt.
 		-- This is harmless, because 99% of the the time, the value has changed, so an update would be performed anyway.
@@ -112,22 +117,58 @@ function TimerBar_BarDisplay:VALUE(icon, value, maxValue, valueColor)
 end
 TimerBar_BarDisplay:SetDataListner("VALUE")
 
+function TimerBar_BarDisplay:UNIT(icon, unit)
+	if unit then
+		self:SetupColors(self.sourceIcon, icon.attributes.valueColor, unit)
+		-- Force an update here since it won't get updated if the unit changes and the value doesnt.
+		-- This is harmless, because 99% of the the time, the value has changed, so an update would be performed anyway.
+		self:UpdateValue(true)
+	end
+end
+TimerBar_BarDisplay:SetDataListner("UNIT")
+
 local colorSettingNames = {
 	"TimerBar_StartColor",
 	"TimerBar_MiddleColor",
 	"TimerBar_CompleteColor",
 }
 
-function TimerBar_BarDisplay:SetupColors(icon, valueColor)
+function TimerBar_BarDisplay:SetupColors(icon, valueColor, unit)
 	icon = icon or self.icon
 
 	if icon.TimerBar_EnableColors then
-		self:SetColors(
-			icon.TimerBar_StartColor,
-			icon.TimerBar_MiddleColor,
-			icon.TimerBar_CompleteColor)
+		if icon.BarDisplay_ClassColor then
+			local class = unit and select(2, UnitClass(unit))
+			if class then
+				local color = (CUSTOM_CLASS_COLORS or RAID_CLASS_COLORS)[class]
+				
+				if color then
+					-- GLOBALS: CUSTOM_CLASS_COLORS, RAID_CLASS_COLORS
+					if color.colorStr then
+						color = color.colorStr
+					else
+						color = TMW:RGBATableToStringWithoutFlags(color)
+					end
 
-	elseif valueColor then
+					self:SetColors(
+						color,
+						color,
+						color)
+
+					return
+				end
+			end
+		else
+			self:SetColors(
+				icon.TimerBar_StartColor,
+				icon.TimerBar_MiddleColor,
+				icon.TimerBar_CompleteColor)
+
+			return
+		end
+	end
+
+	if valueColor then
 		-- TODO: add a setting to the value icon type called "use color", and don't ever pass this value color if they disable that setting?
 		-- This will make color overriding much more intuitive, since the icon.TimerBar_EnableColors is labeled as "Override group colors".
 		if type(valueColor) == "table" and #valueColor == 3 then
@@ -138,12 +179,14 @@ function TimerBar_BarDisplay:SetupColors(icon, valueColor)
 				valueColor,
 				valueColor)
 		end
-	else
-		self:SetColors(
-			TMW:GetColors(colorSettingNames, "TimerBar_EnableColors",
-			              icon.group:GetSettings(), TMW.db.global)
-		)
+
+		return
 	end
+
+	self:SetColors(
+		TMW:GetColors(colorSettingNames, "TimerBar_EnableColors",
+		              icon.group:GetSettings(), TMW.db.global)
+	)
 end
 
 function TimerBar_BarDisplay:SetupForIcon(sourceIcon)
@@ -167,7 +210,7 @@ function TimerBar_BarDisplay:SetupForIcon(sourceIcon)
 	end
 
 	self.sourceIcon = sourceIcon
-	self:SetupColors(sourceIcon, sourceIcon.attributes.valueColor)
+	self:SetupColors(sourceIcon, sourceIcon.attributes.valueColor, sourceIcon.attributes.unit)
 	
 	self:UpdateValue(true)
 end
